--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,32 +1,37 @@
 .navbar {
-    background: #181a1b;
-    display: flex;
-    justify-content: space-around;
-    width: 100%; /* Changed from 100vw to 100% */
-    height: 10vh;
-  }
-  .navbar img {
-    width: 15%;
-    height: 75%;
-    margin-top: 10px;
-  }
-  .nav_menu {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-  }
-  .nav_menu li {
-    list-style: none;
-    padding: 0px 20px 0px 20px;
-    font-size: 1.5rem;
-  }
-  .nav_menu li a {
-    text-decoration: none;
-    color: #e8e6e3;
-  }
-  .nav_menu li a:hover {
-    color: #67fd67;
-    border-bottom: 5px solid #67fd67;
-    transition: color 1s ease;
-  }
-  
+  background: #181a1b;
+  width: 15vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.navbar img {
+  width: 80%;
+  margin: 20px 0;
+}
+.nav_menu {
+  list-style: none;
+  padding: 0;
+  width: 100%;
+  text-align: center;
+}
+.nav_menu li {
+  margin: 20px 0;
+}
+.nav_menu li a {
+  text-decoration: none;
+  color: #e8e6e3;
+  font-size: 1.2rem;
+  display: block;
+  padding: 10px 0;
+  width: 100%;
+}
+.nav_menu li a:hover {
+  color: #67fd67;
+  background: rgba(103, 253, 103, 0.2);
+  transition: all 0.3s ease-in-out;
+}
