--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,10 @@
 
     /* fonts */
     font-family: "Space Mono", serif;
-    font-weight: 700;
-    font-style: normal;
+    /* font-weight: 700;
+    font-style: normal; */
+}
+body
+{
+    display: flex;
 }
