--- a/CSS/home-section.css
+++ b/CSS/home-section.css
@@ -32,3 +32,12 @@
   color: #67fd67cc;
   background-color: #181a1b;
 }
+.journeysection
+{
+  border: 1px solid red;
+  background-color: #181a1b;
+  color: white;
+  width: 85vw;
+  height: 100vh;
+  margin-left: 15vw;
+}
